# ros_solution

./: README.md  setup.sh  test_servo.py
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: wb.pc  wb_sol.pc
devel/lib/python3/dist-packages/tools/: __init__.py
devel/lib/python3/dist-packages/wb/: __init__.py
devel/lib/wb/: key_in.py
devel/share/wb/cmake/: wbConfig.cmake
devel/share/wb_sol/cmake/: wb_solConfig.cmake
install/: .rosinstall  local_setup.sh
install/share/wb/: package.xml
install/share/wb/cmake/: wbConfig.cmake
src/: CMakeLists.txt
src/wb/: CMakeLists.txt  package.xml
src/wb/scripts/: cam_control.py  key_in.py
src/wb/src/tools/results/: optimizer.pth
src/wb/tools/: cam.py
src/wb/urdf/: wb.urdf  wheely_boi.xacro
src/wb_sol/: CMakeLists.txt  package.xml  setup.py
src/wb_sol/plugins/: wb_plugin.cc  wb_plugin.h
src/wb_sol/scripts/: key_in.py
src/wb_sol/src/: simple_sub.cc  simple_sub.h
src/wb_sol/src/tools/: VideoStream.py  cam.py  cam_util.py  neural.py
src/wb_sol/src/tools/results/: model.pth
src/wb_sol/urdf/: wb.urdf  wheely_boi.xacro
